Fix clamping in screenContainsPos

QRect.contains(somePointF.toPoint()) will round the values.

This is problematic for the case of a mouse being at -0.4, we will
consider it in bounds for the screen, but obviously this doesn't match
any surfaces.

The detection and confineToBoundingBox need to behave the same and
floor.

BUG: 459328


(cherry picked from commit e924b1cb231632e53a405a04a24ae63538aa37e1)